cmake_minimum_required(VERSION 3.6)

add_library(disks Disk35.cc Disk525.cc IWM.cc Smartport.cc VirtualDisk.cc)
target_compile_features(disks PUBLIC cxx_std_17)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

if(UNIX)
    target_link_libraries(disks stdc++fs)
    if(CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9)
        message("GCC: Linking to stdc++fs")
        target_link_libraries(disks stdc++fs) #<filesystem>
    endif()
    if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
        message("Clang: Linking...")
        if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7)
            message("c++experimental")
            target_link_libraries(disks c++experimental) 
        elseif(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9)
            message("c++fs")
            target_link_libraries(disks c++fs) 
        endif()
    endif()
endif(UNIX)
